Add customer queryParam in /purchase-orders
